--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   hive_flutter: ^1.1.0
   sqflite: ^2.2.4+1
   path:
+  path_provider: ^2.0.12
 
 dev_dependencies:
   flutter_test:
