--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
-  hive_flutter: ^1.1.0
   sqflite: ^2.2.4+1
-  path:
   path_provider: ^2.0.12
+  intl: ^0.17.0
+  string_stats: ^0.0.3
+  flutter_staggered_grid_view: ^0.4.1
+  share: ^2.0.4
+  lottie: ^1.2.1
 
 dev_dependencies:
   flutter_test:
